force-app/main/default/objects/DemoOverrideObject__c/DemoOverrideObject__c.object-meta.xml
<CustomObject>
    <label>Demo Override Object</label>
    <nameField>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Override Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>