force-app/main/default/objects/DemoOverrideObject__c/fields/Demo1__c.field-meta.xml
<CustomField>
    <fullName>Demo1__c</fullName>
    <label>Demo1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>