force-app/main/default/objects/DemoOverrideObject__c/fields/Search_Layout_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Layout_Name__c</fullName>
    <label>Search Layout Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>