force-app/main/default/objects/DemoOverrideObject__c/fields/Sharing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Amount__c</fullName>
    <label>Sharing Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>