force-app/main/default/objects/DemoOverrideObject__c/recordTypes/TestReordType.recordType-meta.xml
<RecordType>
    <fullName>TestReordType</fullName>
    <active>true</active>
    <label>TestReordType</label>
</RecordType>